Make taskId filter parameter take an arrray of integers