@@ -9,6 +9,7 @@ import static org.junit.jupiter.api.Assertions.assertTrue;
 import static org.mockito.ArgumentMatchers.any;
 import static org.mockito.ArgumentMatchers.anyLong;
 import static org.mockito.ArgumentMatchers.eq;
+import static org.mockito.ArgumentMatchers.isNull;
 import static org.mockito.Mockito.doNothing;
 import static org.mockito.Mockito.doReturn;
 import static org.mockito.Mockito.never;
@@ -307,7 +308,7 @@ public class CurationTaskManagerImplUnitTest {
 
         when(mockAuthorizationManager.canAccess(eq(userInfo), eq(projectId), eq(ObjectType.ENTITY), eq(ACCESS_TYPE.READ))).thenReturn(mockAuthorizationStatus);
         when(mockCurationTaskDao.getCurationTaskBundles(eq(List.of(KeyFactory.stringToKey(projectId))),
-                eq(null), eq(null), eq((Long) null), anyLong(), anyLong())).thenReturn(bundles);
+                eq(null), eq(null), isNull(), anyLong(), anyLong())).thenReturn(bundles);
 
         // Call under test
         ListCurationTaskResponse response = curationTaskManager.getCurationTasks(userInfo, request);
@@ -317,10 +318,11 @@ public class CurationTaskManagerImplUnitTest {
     }
 
     @Test
-    public void testGetCurationTasksWithTaskIdFilter() {
+    public void testGetCurationTasksWithTaskIdsFilter() {
+        List<Long> taskIds = List.of(taskId);
         ListCurationTaskRequest request = new ListCurationTaskRequest()
                 .setProjectId(projectId)
-                .setTaskId(taskId);
+                .setTaskIds(taskIds);
         CurationTask task1 = createCurationTask(CurationTaskPropertiesType.FILE_BASED);
         TaskBundle bundle1 = new TaskBundle().setTask(task1);
         List<TaskBundle> bundles = List.of(bundle1);
@@ -328,7 +330,7 @@ public class CurationTaskManagerImplUnitTest {
         when(mockAuthorizationManager.canAccess(eq(userInfo), eq(projectId), eq(ObjectType.ENTITY), eq(ACCESS_TYPE.READ)))
                 .thenReturn(mockAuthorizationStatus);
         when(mockCurationTaskDao.getCurationTaskBundles(eq(List.of(KeyFactory.stringToKey(projectId))),
-                eq(null), eq(null), eq(taskId), anyLong(), anyLong())).thenReturn(bundles);
+                eq(null), eq(null), eq(taskIds), anyLong(), anyLong())).thenReturn(bundles);
 
         // call under test
         ListCurationTaskResponse response = curationTaskManager.getCurationTasks(userInfo, request);
@@ -338,38 +340,30 @@ public class CurationTaskManagerImplUnitTest {
     }
 
     @Test
-    public void testGetCurationTasksWithTaskIdButNoProjectId() {
-        ListCurationTaskRequest request = new ListCurationTaskRequest().setTaskId(taskId);
-        CurationTask task = createCurationTask(CurationTaskPropertiesType.FILE_BASED).setTaskId(taskId).setProjectId(projectId);
-        TaskBundle bundle = new TaskBundle().setTask(task);
-        List<TaskBundle> bundles = List.of(bundle);
+    public void testGetCurationTasksWithTaskIdsNoProjectId() {
+        List<Long> taskIds = List.of(taskId);
+        ListCurationTaskRequest request = new ListCurationTaskRequest().setTaskIds(taskIds);
 
-        when(mockCurationTaskDao.getCurationTask(taskId)).thenReturn(Optional.of(task));
-        when(mockAuthorizationManager.canAccess(eq(userInfo), eq(projectId), eq(ObjectType.ENTITY), eq(ACCESS_TYPE.READ)))
-                .thenReturn(mockAuthorizationStatus);
-        when(mockCurationTaskDao.getCurationTaskBundles(eq(List.of(KeyFactory.stringToKey(projectId))),
-                eq(null), eq(null), eq(taskId), anyLong(), anyLong())).thenReturn(bundles);
+        Set<Long> allProjectIds = new HashSet<>(Arrays.asList(100L, 200L));
+        Set<Long> accessibleIds = new HashSet<>(Arrays.asList(100L, 200L));
+
+        when(mockCurationTaskDao.getDistinctProjectIds()).thenReturn(allProjectIds);
+        when(mockAclManager.getAccessibleBenefactors(eq(userInfo), eq(ObjectType.ENTITY), eq(allProjectIds), eq(ACCESS_TYPE.READ)))
+                .thenReturn(accessibleIds);
+
+        CurationTask task1 = createCurationTask(CurationTaskPropertiesType.FILE_BASED);
+        TaskBundle bundle1 = new TaskBundle().setTask(task1);
+        List<TaskBundle> bundles = List.of(bundle1);
+
+        when(mockCurationTaskDao.getCurationTaskBundles(any(), eq(null), eq(null), eq(taskIds), anyLong(), anyLong()))
+                .thenReturn(bundles);
 
         // call under test
         ListCurationTaskResponse response = curationTaskManager.getCurationTasks(userInfo, request);
 
-        assertEquals(List.of(task), response.getPage());
+        assertEquals(List.of(task1), response.getPage());
         assertEquals(bundles, response.getBundlePage());
-        verify(mockCurationTaskDao, never()).getDistinctProjectIds();
-        verifyNoMoreInteractions(mockAclManager);
-    }
-
-    @Test
-    public void testGetCurationTasksWithTaskIdButNoProjectIdNotFound() {
-        ListCurationTaskRequest request = new ListCurationTaskRequest().setTaskId(taskId);
-
-        when(mockCurationTaskDao.getCurationTask(taskId)).thenReturn(Optional.empty());
-
-        // call under test
-        assertThrows(NotFoundException.class, () -> curationTaskManager.getCurationTasks(userInfo, request));
-
-        verify(mockCurationTaskDao, never()).getDistinctProjectIds();
-        verifyNoMoreInteractions(mockAclManager, mockAuthorizationManager);
+        verify(mockCurationTaskDao, never()).getCurationTask(any());
     }
 
 	@Test
@@ -385,7 +379,7 @@ public class CurationTaskManagerImplUnitTest {
 		when(mockAuthorizationManager.canAccess(eq(userInfo), eq(projectId), eq(ObjectType.ENTITY),
 				eq(ACCESS_TYPE.READ))).thenReturn(mockAuthorizationStatus);
 		when(mockCurationTaskDao.getCurationTaskBundles(eq(List.of(KeyFactory.stringToKey(projectId))), eq(List.of(111L,222L)),
-				eq(null), eq((Long) null), anyLong(), anyLong())).thenReturn(bundles);
+				eq(null), isNull(), anyLong(), anyLong())).thenReturn(bundles);
 
 		// Call under test
 		ListCurationTaskResponse response = curationTaskManager.getCurationTasks(userInfo, request);
@@ -425,7 +419,7 @@ public class CurationTaskManagerImplUnitTest {
         when(mockAuthorizationManager.canAccess(eq(userInfo), eq(projectId), eq(ObjectType.ENTITY), eq(ACCESS_TYPE.READ)))
                 .thenReturn(mockAuthorizationStatus);
         when(mockCurationTaskDao.getCurationTaskBundles(eq(List.of(KeyFactory.stringToKey(projectId))),
-                eq(new ArrayList<>(groups)), eq(null), eq((Long) null), anyLong(), anyLong())).thenReturn(bundles);
+                eq(new ArrayList<>(groups)), eq(null), isNull(), anyLong(), anyLong())).thenReturn(bundles);
 
         // Call under test
         ListCurationTaskResponse response = curationTaskManager.getCurationTasks(userInfo, request);
@@ -465,7 +459,7 @@ public class CurationTaskManagerImplUnitTest {
         TaskBundle bundle1 = new TaskBundle().setTask(task1);
         List<TaskBundle> bundles = Arrays.asList(bundle1);
 
-        when(mockCurationTaskDao.getCurationTaskBundles(any(), eq(null), eq(null), eq((Long) null), anyLong(), anyLong()))
+        when(mockCurationTaskDao.getCurationTaskBundles(any(), eq(null), eq(null), isNull(), anyLong(), anyLong()))
                 .thenReturn(bundles);
 
         // Call under test
